--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
         <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <title>ダレデモ画伯</title>
     </head>
     <body>
         <div class="background">
