--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
         <title>ダレデモ画伯</title>
     </head>
+
     <body>
-        <div class="background">
-            <script src='js/painting.js' class="canvas"></script>
-        </div>
+        <header>
+            <div class="title">
+                <h1>ダレデモ画伯</h1>
+            </div>
+        </header>
+        <main>
+            <div class="background">
+                <script src='js/painting.js' class="canvas"></script>
+            </div>
+        </main>
+        <footer>
+            <div class="footer">
+                <div class="infomation">
+                    <div class="info_text">
+                        <p>Made With Plateau</p>
+                    </div>
+                    <div class="plateau_icon">
+                        <img src="data/plateau_icon.png">
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
