make multi pages

--- a/gahaku.html
+++ b/gahaku.html
@@ -25,20 +25,7 @@
             </div>
         </header>
         <main>
-            <div class="background">
-                <div class="links">
-                    <div class="gahaku">
-                        <a href="gahaku.html">
-                            ダレデモ画伯　→
-                        </a>
-                    </div>
-                    <div class="walaremichi">
-                        <a href="wakaremichi.html">
-                            分かれ道　→
-                        </a>
-                    </div>
-                </div>
-            </div>
+            <script src='js/painting.js' class="canvas"></script>
         </main>
         <footer>
             <div class="footer">
