--- a/wakaremichi.html
+++ b/wakaremichi.html
@@ -21,24 +21,11 @@
     <body>
         <header>
             <div class="title">
-                <h1>ダレデモ画伯</h1>
+                <h1>風よけMAP</h1>
             </div>
         </header>
         <main>
-            <div class="background">
-                <div class="links">
-                    <div class="gahaku">
-                        <a href="gahaku.html">
-                            ダレデモ画伯　→
-                        </a>
-                    </div>
-                    <div class="walaremichi">
-                        <a href="wakaremichi.html">
-                            分かれ道　→
-                        </a>
-                    </div>
-                </div>
-            </div>
+                <script src='js/wind.js' class="canvas"></script>
         </main>
         <footer>
             <div class="footer">
