--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
         <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
-        <title>ダレデモ画伯</title>
+        <title>Moc Apps</title>
         <script>
             (function(d) {
               var config = {
@@ -21,7 +21,7 @@
     <body>
         <header>
             <div class="title">
-                <h1>ダレデモ画伯</h1>
+                <h1>Moc Apps</h1>
             </div>
         </header>
         <main>
