--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                             分かれ道　→
                         </a>
                     </div>
+                    <div class="walaremichi">
+                        <a href="music.html">
+                            音楽　→
+                        </a>
+                    </div>
                 </div>
             </div>
         </main>
