--- a/music.html
+++ b/music.html
@@ -2,6 +2,8 @@
 <html lang = "ja">
     <head>
         <meta charset = "UTF-8">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
         <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
         <link href="styles/style_music.css" rel="stylesheet" type="text/css" media="all">
