--- a/music.html
+++ b/music.html
@@ -62,6 +62,7 @@
                         </div>
                     </div>
                     <div class="city_viewer">
+                        <script src='js/city.js' class="canvas"></script>
                         
                     </div>
                 </div>
