--- a/music.html
+++ b/music.html
@@ -61,8 +61,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="indicator">
+                        <div class="triangle">
+                            <img src="data/arrow-04.png">
+                        </div>
+                    </div>
                     <div class="city_viewer">
-                        <script src='js/city.js' class="canvas"></script>
+                        <div class="city_viewer_container">
+                            <div class="city_viewer_container_background">
+                                <script src='js/city.js' class="canvas"></script>
+                            </div>
+                        </div>
                         
                     </div>
                 </div>
