--- a/music.html
+++ b/music.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="city_viewer">
                         <div class="city_viewer_container">
-                            <div class="city_viewer_container_background">
+                            <div class="city_viewer_container_background" id="result">
                                 <script src='js/city.js' class="canvas"></script>
                             </div>
                         </div>
