--- a/music.html
+++ b/music.html
@@ -39,7 +39,7 @@
                             <h1>Data Stream</h1>
                         </div>
                         <div class="artist_name">
-                            <p>Unpredictable</p>
+                            <p>Explorer</p>
                         </div>
                     </div>
                     <div class="UI">
