--- a/music.html
+++ b/music.html
@@ -36,7 +36,7 @@
                 <div class ="player_container">
                     <div class="music_info">
                         <div class="music_name">
-                            <h1>Data Stream</h1>
+                            <h1>City data life</h1>
                         </div>
                         <div class="artist_name">
                             <p>Explorer</p>
