--- a/music.html
+++ b/music.html
@@ -34,37 +34,40 @@
         <main>
             <div class ="player">
                 <div class ="player_container">
-                    <div class="music_info">
-                        <div class="music_name">
-                            <h1>City data life</h1>
+                    <div class="controller">
+                        <div class="music_info">
+                            <div class="music_name">
+                                <h1>City data life</h1>
+                            </div>
+                            <div class="artist_name">
+                                <p>Explorer</p>
+                            </div>
                         </div>
-                        <div class="artist_name">
-                            <p>Explorer</p>
+                        <div class="UI">
+                            <div class ="button_back button">
+                                <img src="data/button_back.png">
+                            </div>
+                            <div class ="button_stop button">
+                                <img src="data/button_stop.png">
+                            </div>
+                            <div class ="button_forward button">
+                                <img src="data/button_forward.png">
+                            </div>
                         </div>
-                    </div>
-                    <div class="UI">
-                        <div class ="button_back button">
-                            <img src="data/button_back.png">
-                        </div>
-                        <div class ="button_stop button">
-                            <img src="data/button_stop.png">
-                        </div>
-                        <div class ="button_forward button">
-                            <img src="data/button_forward.png">
-                        </div>
-                    </div>
-                    <div class="record">
-                        <div class="record_container">
-                            <div class="record_circle">
-                                <div class="record_img">
+                        <div class="record">
+                            <div class="record_container">
+                                <div class="record_circle">
+                                    <div class="record_img">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="indicator">
+                                <div class="triangle">
+                                    <img src="data/arrow-04.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="indicator">
-                            <div class="triangle">
-                                <img src="data/arrow-04.png">
-                            </div>
-                        </div>
+                        
                     </div>
                     <div class="city_viewer">
                         <div class="city_viewer_container">
