--- a/music_start.html
+++ b/music_start.html
@@ -6,8 +6,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
         <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
-        <title>Moc Apps</title>
+        <link href="styles/style_music_start.css" rel="stylesheet" type="text/css" media="all">
+        <title>music</title>
         <script>
             (function(d) {
               var config = {
@@ -21,37 +21,14 @@
     </head>
 
     <body>
-        <header>
-        </header>
-        <main>
-            <div class="title">
-                <h1>Moc Apps</h1>
-            </div>
-            <div class="background">
-                <div class="links">
-                    <div class="gahaku">
-                        <a href="gahaku.html">
-                            ダレデモ画伯　→
-                        </a>
-                    </div>
-                    <div class="walaremichi">
-                        <a href="wakaremichi.html">
-                            分かれ道　→
-                        </a>
-                    </div>
-                    <div class="walaremichi">
-                        <a href="music.html">
-                            音楽　→
-                        </a>
-                    </div>
-                    <div class="music_start">
-                        <a href="music_start.html">
-                            音楽スタート　→
-                        </a>
-                    </div>
-
+        <header class="anim-box">
+            <div class="header_container">
+                <div class="title">
+                    <h1>PLATEAU MUSIC</h1>
                 </div>
             </div>
+        </header>
+        <main>
         </main>
         <footer>
             <div class="footer">
