--- a/music_start.html
+++ b/music_start.html
@@ -28,7 +28,11 @@
                 </div>
             </div>
         </header>
+
         <main>
+            <div class="logo">
+                <img src="data/plateau_logo.png">
+            </div>
         </main>
         <footer>
             <div class="footer">
