--- a/gahaku.html
+++ b/gahaku.html
@@ -6,7 +6,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
         <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="styles/style_gahaku.css" rel="stylesheet" type="text/css" media="all">
         <title>ダレデモ画伯</title>
         <script>
             (function(d) {
